--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URL="mysql://root@localhost:3306/blog-express"
+DATABASE_URL="mysql://root:199802qwerB!@localhost:3306/blog-express"
