--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=8000
 DATABASE_URL="mysql://root:199802qwerB!@localhost:3306/blog-express"
 JWT_SECRET=secret
+NEXT_BASE_URL=http://localhost:3000
+GMAIL_EMAIL=abdfais123@gmail.com
+GMAIL_APP_PASSWORD=qahm ulbb udxl tsjh
