--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,10 +23,15 @@
     "lucide-react": "^0.390.0",
     "next": "14.0.4",
     "next-themes": "^0.3.0",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "rehype-raw": "^7.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
